; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/watchdog/extr_ixp4xx_wdt.c_ixp4xx_wdt_open.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/watchdog/extr_ixp4xx_wdt.c_ixp4xx_wdt_open.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.inode = type { i32 }
%struct.file = type { i32 }

@WDT_IN_USE = common dso_local global i32 0, align 4
@wdt_status = common dso_local global i32 0, align 4
@EBUSY = common dso_local global i32 0, align 4
@WDT_OK_TO_CLOSE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.inode*, %struct.file*)* @ixp4xx_wdt_open to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ixp4xx_wdt_open(%struct.inode* %0, %struct.file* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.inode*, align 8
  %5 = alloca %struct.file*, align 8
  store %struct.inode* %0, %struct.inode** %4, align 8
  store %struct.file* %1, %struct.file** %5, align 8
  %6 = load i32, i32* @WDT_IN_USE, align 4
  %7 = call i64 @test_and_set_bit(i32 %6, i32* @wdt_status)
  %8 = icmp ne i64 %7, 0
  br i1 %8, label %9, label %12

9:                                                ; preds = %2
  %10 = load i32, i32* @EBUSY, align 4
  %11 = sub nsw i32 0, %10
  store i32 %11, i32* %3, align 4
  br label %19

12:                                               ; preds = %2
  %13 = load i32, i32* @WDT_OK_TO_CLOSE, align 4
  %14 = call i32 @clear_bit(i32 %13, i32* @wdt_status)
  %15 = call i32 (...) @wdt_enable()
  %16 = load %struct.inode*, %struct.inode** %4, align 8
  %17 = load %struct.file*, %struct.file** %5, align 8
  %18 = call i32 @nonseekable_open(%struct.inode* %16, %struct.file* %17)
  store i32 %18, i32* %3, align 4
  br label %19

19:                                               ; preds = %12, %9
  %20 = load i32, i32* %3, align 4
  ret i32 %20
}

declare dso_local i64 @test_and_set_bit(i32, i32*) #1

declare dso_local i32 @clear_bit(i32, i32*) #1

declare dso_local i32 @wdt_enable(...) #1

declare dso_local i32 @nonseekable_open(%struct.inode*, %struct.file*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
